# qwen-asr-cli

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: update_formula.py
src/qwen_asr_cli/: __init__.py  audio_preprocess.py  commands.py  main.py  model_store.py  runtime.py  transcribe.py
tests/: test_cli_args.py  test_model_store.py  test_runtime_checks.py  test_transcribe_flow.py
